Add project body

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,13 @@
     <title>Tailwind Travel</title>
   </head>
   <body>
-    <p class="font-Montserrat text-xl">Hello world!</p>
-    <div class="w-64 h-64 bg-switzerland"></div>
+    <nav></nav>
+    <div id="tab_bar"></div>
+    <section>
+      <div id="home"></div>
+      <div id="recomendadas"></div>
+      <div id="rentas_destacadas"></div>
+    </section>
+    <footer></footer>
   </body>
 </html>
