Create home section

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,25 @@
   <body>
     <nav></nav>
     <div id="tab_bar"></div>
-    <section>
-      <div id="home"></div>
+    <section class="w-full h-screen">
+      <div id="home">
+        <div class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center">
+          <input class="w-4/5 p-3 rounded-full shadow-md" placeholder="San Francisco" type="search" name="" id="">
+
+          <button class="w-48 text-xl text-primary font-semibold p-4 bg-white shadow-md rounded-full">
+            Explorar More
+          </button>
+        </div>
+
+        <div class="w-full h-3/4">
+          <div class="w-full h-full">
+            <img src="./img/sanFrancisco.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
       <div id="recomendadas"></div>
+
       <div id="rentas_destacadas"></div>
     </section>
     <footer></footer>
