Add extracting components

--- a/public/index.html
+++ b/public/index.html
@@ -33,36 +33,36 @@
         </div>
       </div>
 
-      <div class="flex gap-4 w-full p-8 snap-x overflow-x-auto" id="recomendadas">
-        <div class="snap-center w-48 h-64 shrink-0 shadow-md shadow-lime-400 rounded-lg overflow-hidden">
+      <div class="flex justify-between w-full p-8 gap-4 snap-x overflow-x-auto" id="recomendadas">
+        <div class="Card Green-shadow">
           <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
           <div class="w-full h-2/5 p-4 bg-secondary text-white">
             <p class="font-bold text-xl">Norway</p>
             <p class="text-base">Beautiful landscapes</p>
           </div>
         </div>
-        <div class="snap-center w-48 h-64 shrink-0 shadow-md shadow-sky-300 rounded-lg overflow-hidden">
+        <div class="Card Blue-shadow">
           <div class="w-full h-3/5 rounded-t-lg bg-new_york bg-cover"></div>
           <div class="w-full h-2/5 p-4 bg-white text-tertiary">
             <p class="font-bold text-xl">New York</p>
             <p class="text-base">Concrete jungle</p>
           </div>
         </div>
-        <div class="snap-center w-48 h-64 shrink-0 shadow-md shadow-lime-400 rounded-lg overflow-hidden">
+        <div class="Card Green-shadow">
           <div class="w-full h-3/5 rounded-t-lg bg-yosemite bg-cover"></div>
           <div class="w-full h-2/5 p-4 bg-secondary text-white">
             <p class="font-bold text-xl">Yosemite</p>
             <p class="text-base">A break from de world</p>
           </div>
         </div>
-        <div class="snap-center w-48 h-64 shrink-0 shadow-md shadow-sky-300 rounded-lg overflow-hidden">
+        <div class="Card Blue-shadow">
           <div class="w-full h-3/5 rounded-t-lg bg-seattle bg-cover"></div>
           <div class="w-full h-2/5 p-4 bg-white text-tertiary">
             <p class="font-bold text-xl">Seattle</p>
             <p class="text-base">Big City</p>
           </div>
         </div>
-        <div class="snap-center w-48 h-64 shrink-0 shadow-md shadow-lime-400 rounded-lg overflow-hidden">
+        <div class="Card Green-shadow">
           <div class="w-full h-3/5 rounded-t-lg bg-switzerland bg-cover"></div>
           <div class="w-full h-2/5 p-4 bg-secondary text-white">
             <p class="font-bold text-xl">Switzerland</p>
