--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
     <section class="w-full h-screen">
       <div id="home">
         <div class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center">
-          <input class="w-4/5 p-3 rounded-full shadow-md" placeholder="San Francisco" type="search" name="" id="">
+          <input class="w-4/5 p-3 rounded-full shadow-md outline-none transition-all duration-300 focus-within:shadow-md focus:ring-2 focus:w-11/12" placeholder="San Francisco" type="search" name="" id="">
 
-          <button class="w-48 text-xl text-primary font-semibold p-4 bg-white shadow-md rounded-full">
+          <button class="w-48 text-xl text-primary font-semibold p-4 bg-white shadow-md rounded-full transition-all duration-500 ease-in-out hover:bg-primary hover:text-white transform hover:-translate-y-1 hover:scale-110">
             Explorar More
           </button>
         </div>
