--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,15 @@
     <link rel="stylesheet" href="./css/tailwind.css" />
     <title>Tailwind Travel</title>
   </head>
-  <body>
+  <body class="font-Montserrat">
     <nav></nav>
     <div id="tab_bar"></div>
     <section class="w-full h-screen">
       <div id="home">
         <div class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center">
-          <input class="w-4/5 p-3 rounded-full shadow-md outline-none transition-all duration-300 focus-within:shadow-md focus:ring-2 focus:w-11/12" placeholder="San Francisco" type="search" name="" id="">
+          <input class="w-3/5 p-4 rounded-full shadow-md outline-none transition-all duration-300 focus-within:shadow-md focus:ring-2 focus:w-4/5" placeholder="San Francisco" type="search" name="" id="">
 
-          <button class="w-48 text-xl text-primary font-semibold p-4 bg-white shadow-md rounded-full transition-all duration-500 ease-in-out hover:bg-primary hover:text-white transform hover:-translate-y-1 hover:scale-110">
+          <button class="w-48 text-lg text-primary font-semibold p-3 bg-white shadow-md rounded-full transition-all duration-500 ease-in-out hover:bg-primary hover:text-white transform hover:-translate-y-1 hover:scale-110">
             Explorar More
           </button>
         </div>
@@ -36,7 +36,7 @@
       <div class="py-10" id="recomendadas">
         <p class="pl-10 font-semibold text-3xl text-primary">Our recomendation</p>
 
-        <div class="flex justify-between w-auto my-6 px-8 gap-4 snap-x overflow-x-auto overscroll-contain scrollbar-hide">
+        <div class="flex w-auto p-8 gap-5 snap-x overflow-x-auto overscroll-contain scrollbar-hide">
           <div class="Card Green-shadow">
             <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
             <div class="w-full h-2/5 p-4 bg-secondary text-white">
