--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <div class="py-10" id="recomendadas">
         <p class="pl-10 font-semibold text-3xl text-primary">Our recomendation</p>
 
-        <div class="flex w-auto p-8 gap-5 snap-x overflow-x-auto overscroll-contain scrollbar-hide">
+        <div class="flex w-auto p-8 pb-0 gap-5 snap-x overflow-x-auto overscroll-contain scrollbar-hide">
           <div class="Card Green-shadow">
             <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
             <div class="w-full h-2/5 p-4 bg-secondary text-white">
@@ -79,7 +79,30 @@
         </div>
       </div>
 
-      <div id="rentas_destacadas"></div>
+      <div class="w-full px-8 pb-10" id="rentas_destacadas">
+        <p class="pb-6 text-3xl text-primary font-semibold">Trending stays</p>
+        <div class="w-full h-full flex flex-col space-y-6 items-center justify-center">
+          <div class="w-full h-96 bg-chicago bg-cover rounded-xl">
+            <p class="card-title">Chicago</p>
+            <p class="text-base mr-24 pl-8 text-black">2 rooms, bathroom and kitchen.</p>
+          </div>
+          
+          <div class="w-full h-96 bg-LA bg-cover rounded-xl">
+            <p class="card-title">Los Angeles</p>
+            <p class="text-base mr-24 pl-8 text-white">4 rooms, 3 bathrooms, kitchen and private pool.</p>
+          </div>
+
+          <div class="w-full h-96 bg-miami bg-cover rounded-xl">
+            <p class="card-title">Miami</p>
+            <p class="text-base mr-24 pl-8 text-black">3 rooms, 2 bathrooms,  kitchen and amazing sea view.</p>
+          </div>
+
+          <div class="w-full h-96 bg-bali bg-cover rounded-xl">
+            <p class="card-title">Bali</p>
+            <p class="text-base mr-24 pl-8 text-white">2 rooms, 2 bathrooms,  kitchen and private pool.</p>
+          </div>
+        </div>
+      </div>
     </section>
     <footer></footer>
   </body>
