Add FAQs section structure

--- a/public/index.html
+++ b/public/index.html
@@ -79,9 +79,9 @@
         </div>
       </div>
 
-      <div class="w-full px-8 pb-10" id="rentas_destacadas">
-        <p class="pb-6 text-3xl text-primary font-semibold">Trending stays</p>
-        <div class="w-full h-full flex flex-col space-y-6 items-center justify-center">
+      <div class="w-full pb-10" id="rentas_destacadas">
+        <p class="pl-10 text-3xl text-primary font-semibold">Trending stays</p>
+        <div class="w-full h-full px-8 pt-8 flex flex-col space-y-6 items-center justify-center">
           <div class="w-full h-96 bg-chicago bg-cover rounded-xl">
             <p class="card-title">Chicago</p>
             <p class="text-base mr-24 pl-8 text-black">2 rooms, bathroom and kitchen.</p>
@@ -100,6 +100,62 @@
           <div class="w-full h-96 bg-bali bg-cover rounded-xl">
             <p class="card-title">Bali</p>
             <p class="text-base mr-24 pl-8 text-white">2 rooms, 2 bathrooms,  kitchen and private pool.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full h-full" id="faqs">
+        <p class="pl-10 text-3xl text-primary font-semibold">FAQs</p>
+        
+        <div class="flex flex-col px-8 pt-8 space-y-4">
+          <div>
+            <p class="text-xl text-primary font-medium">
+              Política de Cancelación
+            </p>
+  
+            <p class="text-base pt-2">
+              Para estancias menores a una semana es importante avisar con 3 días de anticipación, de caso contario será sancionado.
+            </p>
+          </div>
+          
+          <div>
+            <p class="text-xl text-primary font-medium">
+              Métodos de pago
+            </p>
+  
+            <p class="text-base pt-2">
+              Aceptamos distintos métodos de pago: VISA, MasterCard, American Express,Paypal y Binance
+            </p>
+          </div>
+  
+          <div>
+            <p class="text-xl text-primary font-medium">
+              Mascotas
+            </p>
+  
+            <p class="text-base pt-2">
+              El tema de las mascotas dependerá directamente del anfitrión.
+            </p>
+          </div>
+  
+          <div>
+            <p class="text-xl text-primary font-medium">
+              Información de Seguridad
+            </p>
+  
+            <p class="text-base pt-2">
+              Todas nuestras estancias cuentan con seguro en caso de accidentes
+            </p>
+          </div>
+  
+          <div>
+            <p class="text-xl text-primary font-medium">
+              Estancias Largas
+            </p>
+  
+            <p class="text-base pt-2">
+              Contamos con estancias de hasta 3 meses, en este caso es requerido un anticipo con un monto del 50% del valor de la renta
+            </p>
           </div>
         </div>
       </div>
