Add footer structure

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <body class="font-Montserrat">
     <nav></nav>
     <div id="tab_bar"></div>
-    <section class="w-full h-screen">
+    <section class="w-full h-auto">
       <div id="home">
         <div class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center">
           <input class="w-3/5 p-4 rounded-full shadow-md outline-none transition-all duration-300 focus-within:shadow-md focus:ring-2 focus:w-4/5" placeholder="San Francisco" type="search" name="" id="">
@@ -104,7 +104,7 @@
         </div>
       </div>
 
-      <div class="w-full h-full" id="faqs">
+      <div class="w-full h-full pb-10" id="faqs">
         <p class="pl-10 text-3xl text-primary font-semibold">FAQs</p>
         
         <div class="flex flex-col px-8 pt-8 space-y-4">
@@ -160,6 +160,19 @@
         </div>
       </div>
     </section>
-    <footer></footer>
+
+    <footer class="w-full h-full py-10 pl-8 bg-gray-50 text-gray-400">
+      <p class="mb-4 text-2xl font-semibold">About us</p>
+      <div class="space-y-2">
+        <p class="text-base">Investors</p>
+        <p class="text-base">Jobs</p>
+        <p class="text-base">Privacy policy</p>
+        <p class="text-base">Terms and Conditions</p>
+        <p class="text-base">Tainwind Travel, inc</p>
+        <p class="text-base">Follow Us</p>
+        <a class="inline-block w-6 h-6 bg-instagram mr-3" href="#"></a>
+        <a class="inline-block w-6 h-6 bg-twitter" href=""></a>
+      </div>
+    </footer>
   </body>
 </html>
