--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,7 @@
       </div>
     </section>
 
-    <footer class="w-full h-full mb-16 py-10 pl-8 bg-gray-50 text-gray-400" id="about-us">
+    <footer class="w-full h-full mb-16 py-10 pl-8 bg-gray-50 text-gray-400 lg:mb-0" id="about-us">
       <p class="mb-4 text-2xl font-semibold">About Us</p>
       <div class="space-y-2">
         <p class="text-base">Investors</p>
