Change index.html file location

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/tailwind.css" />
+    <link rel="stylesheet" href="./public/css/tailwind.css" />
     <title>Tailwind Travel</title>
   </head>
   <body class="font-Montserrat dark:bg-gray-900">
@@ -54,7 +54,7 @@
         </div>
 
         <div class="w-full h-full lg:h-screen lg:bg-sanFranciscoDesktop lg:bg-cover lg:bg-center">
-          <img class="lg:hidden" src="./img/sanFrancisco.jpg" alt="">
+          <img class="lg:hidden" src="./public/img/sanFrancisco.jpg" alt="">
         </div>
       </div>
 
@@ -119,7 +119,7 @@
 
           <div class="w-full h-96 bg-miami bg-cover bg-center rounded-xl lg:relative lg:h-full lg:pt-8 lg:text-right lg:bg-center">
             <p class="card-title lg:pt-1 lg:pr-16">Miami</p>
-            <p class="text-base mr-24 pl-8black lg:absolute lg:w-7/12 lg:right-0 lg:mr-16 lg:text-lg">3 rooms, 2 bathrooms,  kitchen and amazing sea view.</p>
+            <p class="text-base mr-24 pl-8 lg:absolute lg:w-7/12 lg:right-0 lg:mr-16 lg:text-lg">3 rooms, 2 bathrooms,  kitchen and amazing sea view.</p>
           </div>
 
           <div class="w-full h-96 bg-bali bg-cover bg-center rounded-xl lg:relative lg:h-full lg:pt-8 lg:text-right lg:bg-center">
