--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="shortcut icon" href="./public/svg/map.svg" type="image/x-icon">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
@@ -54,7 +55,7 @@
         </div>
 
         <div class="w-full h-full lg:h-screen lg:bg-sanFranciscoDesktop lg:bg-cover lg:bg-center">
-          <img class="lg:hidden" src="./public/img/sanFrancisco.jpg" alt="">
+          <img class="lg:hidden" loading="lazy" src="./public/img/sanFrancisco.jpg" alt="">
         </div>
       </div>
 
